@@ -1,16 +1,0 @@
-#
-# This is a small hook which notifies the event publisher of new events
-# The hookname and cookie are translated into XML
-#
-
-HOOKNAME=$1
-COOKIE=$2
-
-EVENTFILE=/tmp/igord-events
-
-if [[ -z "$HOOKNAME" || -z "$COOKIE" ]];
-then
-    echo "Hookname or cookie missing: $@" >&2
-else
-    echo "<event type='$HOOKNAME' session='$COOKIE' />"  > $EVENTFILE
-fi
