@@ -1,3 +1,7 @@
+igor-0.4.9
+- Use redis (pubsub) (instead of custom) to publish events
+- Reorganize files
+
 igor-0.4.0
 - Event framework to signal job changes
 - New client (igorc)
